--- a/AngularJS Forms Using Bootstrap and MVC 5/AngularForms/AngularForms/index.html
+++ b/AngularJS Forms Using Bootstrap and MVC 5/AngularForms/AngularForms/index.html
@@ -3,9 +3,11 @@
 <head>
     <title></title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="Content/app.css" rel="stylesheet" />
+
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
-
+    <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
     <!--
         <script src="Scripts/angular.min.js"></script>
         <script src="Scripts/angular-route.min.js"></script>
@@ -13,6 +15,7 @@
 
     <script src="app/AngularFormsApp.js"></script>
     <script src="app/DataService.js"></script>
+    <script src="app/ValidationDirective.js"></script>
 
     <script src="app/EmployeeForm/efController.js"></script>
     <script src="app/EmployeeForm/efDirective.js"></script>
